[功能]共用image服務
